chore: use rollup and swc

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
 	<title>logseq-plugin-wrap</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<link rel="icon" href="data:" />
-	<link rel="modulepreload" as="script" href="index.js" />
+	{preload}
 </head>
 
 <body>
-	<script type="module" src="index.js"></script>
+	{js}
 </body>
 
 </html>
